--- a/packages/solidity-ts/package.json
+++ b/packages/solidity-ts/package.json
@@ -46,6 +46,7 @@
     "@openzeppelin/contracts": "4.7.3",
     "@openzeppelin/hardhat-upgrades": "^1.20.0",
     "@primitivefi/hardhat-dodoc": "^0.2.3",
+    "@solidstate/contracts": "^0.0.52",
     "@tenderly/hardhat-tenderly": "^1.1.6",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.3",
