--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "packages/blacksmith"]
 	path = packages/blacksmith
 	url = http://github.com/alto-io/blacksmith.git
+[submodule "packages/solidity-ts/lib/forge-std"]
+	path = packages/solidity-ts/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
