--- a/packages/solidity-ts/package.json
+++ b/packages/solidity-ts/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
+    "verify": "hardhat etherscan-verify --solc-input --network",
+    "tests": "hardhat test --network hardhat",
+    "merkle-generate": "ts-node helpers/merkle-tree/generateTree.ts",
     "chain:hardhat": "cross-env BUILDING=true hardhat node --network hardhat --no-deploy",
     "chain:foundry": "anvil",
     "fork:hardhat": "cross-env hardhat node --fork https://mainnet.infura.io/v3/460f40a260564ac4a4f4b3fffb032dad",
@@ -45,6 +48,7 @@
     "@op-games/common": "0.0.0",
     "@openzeppelin/contracts": "4.7.3",
     "@openzeppelin/hardhat-upgrades": "^1.20.0",
+    "@openzeppelin/merkle-tree": "^1.0.2",
     "@primitivefi/hardhat-dodoc": "^0.2.3",
     "@solidstate/contracts": "^0.0.52",
     "@tenderly/hardhat-tenderly": "^1.1.6",
@@ -53,7 +57,7 @@
     "bip39": "^3.0.4",
     "chalk": "^4.1.2",
     "ethers": "^5.7.1",
-    "hardhat": "^2.11.1",
+    "hardhat": "^2.12.7",
     "hardhat-contract-sizer": "^2.6.1",
     "hardhat-deploy": "^0.11.15",
     "hardhat-deploy-ethers": "^0.3.0-beta.13",
