Add scripts to interact with contracts

--- a/packages/solidity-ts/package.json
+++ b/packages/solidity-ts/package.json
@@ -6,6 +6,11 @@
     "verify": "hardhat etherscan-verify --solc-input --network",
     "tests": "hardhat test --network",
     "merkle-generate": "ts-node helpers/merkle-tree/generateTree.ts",
+    "script:mint-items": "npx hardhat run ./scripts/arcadia/1_mintItems.ts --network",
+    "script:mint-arcadian": "npx hardhat run ./scripts/arcadia/2_mintArcadian.ts --network",
+    "script:create-slots": "npx hardhat run ./scripts/arcadia/3_createSlots.ts --network",
+    "script:equip-items": "npx hardhat run ./scripts/arcadia/4_equipItems.ts --network",
+    "script:fetch-data": "npx hardhat run ./scripts/arcadia/5_fetchDataSC.ts --network",
     "deploy": "npx hardhat deploy --network",
     "chain:hardhat": "cross-env BUILDING=true hardhat node --network hardhat --no-deploy",
     "chain:foundry": "anvil",
