Add script to unequip

--- a/packages/solidity-ts/package.json
+++ b/packages/solidity-ts/package.json
@@ -10,7 +10,8 @@
     "script:mint-arcadian": "npx hardhat run ./scripts/arcadia/2_mintArcadian.ts --network",
     "script:create-slots": "npx hardhat run ./scripts/arcadia/3_createSlots.ts --network",
     "script:equip-items": "npx hardhat run ./scripts/arcadia/4_equipItems.ts --network",
-    "script:fetch-data": "npx hardhat run ./scripts/arcadia/5_fetchDataSC.ts --network",
+    "script:unequip-items": "npx hardhat run ./scripts/arcadia/5_unequipItems.ts --network",
+    "script:fetch-data": "npx hardhat run ./scripts/arcadia/6_fetchDataSC.ts --network",
     "deploy": "npx hardhat deploy --network",
     "chain:hardhat": "cross-env BUILDING=true hardhat node --network hardhat --no-deploy",
     "chain:foundry": "anvil",
