--- a/packages/solidity-ts/package.json
+++ b/packages/solidity-ts/package.json
@@ -7,7 +7,7 @@
     "tests": "hardhat test --network",
     "merkle-generate": "ts-node helpers/merkle-tree/generateTree.ts",
     "script:mint-items": "npx hardhat run ./scripts/arcadia/1_mintItems.ts --network",
-    "script:mint-arcadian": "npx hardhat run ./scripts/arcadia/2_mintArcadian.ts --network",
+    "script:mint-arcadians": "npx hardhat run ./scripts/arcadia/2_mintArcadians.ts --network",
     "script:create-slots": "npx hardhat run ./scripts/arcadia/3_createSlots.ts --network",
     "script:equip-items": "npx hardhat run ./scripts/arcadia/4_equipItems.ts --network",
     "script:unequip-items": "npx hardhat run ./scripts/arcadia/5_unequipItems.ts --network",
