--- a/packages/solidity-ts/package.json
+++ b/packages/solidity-ts/package.json
@@ -7,11 +7,10 @@
     "tests": "hardhat test --network",
     "merkle-generate": "ts-node helpers/merkle-tree/generateTree.ts",
     "script:mint-items": "npx hardhat run ./scripts/arcadia/1_mintItems.ts --network",
-    "script:mint-arcadians": "npx hardhat run ./scripts/arcadia/2_mintArcadians.ts --network",
-    "script:create-slots": "npx hardhat run ./scripts/arcadia/3_createSlots.ts --network",
-    "script:equip-items": "npx hardhat run ./scripts/arcadia/4_equipItems.ts --network",
-    "script:unequip-items": "npx hardhat run ./scripts/arcadia/5_unequipItems.ts --network",
-    "script:fetch-data": "npx hardhat run ./scripts/arcadia/6_fetchDataSC.ts --network",
+    "script:create-slots": "npx hardhat run ./scripts/arcadia/2_createSlots.ts --network",
+    "script:mint-and-equip": "npx hardhat run ./scripts/arcadia/3_mintAndEquip.ts --network",
+    "script:unequip-items": "npx hardhat run ./scripts/arcadia/4_unequipItems.ts --network",
+    "script:fetch-data": "npx hardhat run ./scripts/arcadia/5_fetchDataSC.ts --network",
     "deploy": "npx hardhat deploy --network",
     "chain:hardhat": "cross-env BUILDING=true hardhat node --network hardhat --no-deploy",
     "chain:foundry": "anvil",
