Add script to add addresses to arcadians whitelist

--- a/packages/solidity-ts/package.json
+++ b/packages/solidity-ts/package.json
@@ -10,7 +10,8 @@
     "script:create-slots": "npx hardhat run ./scripts/arcadia/2_createSlots.ts --network",
     "script:mint-and-equip": "npx hardhat run ./scripts/arcadia/3_mintAndEquip.ts --network",
     "script:unequip-items": "npx hardhat run ./scripts/arcadia/4_unequipItems.ts --network",
-    "script:fetch-data": "npx hardhat run ./scripts/arcadia/5_fetchDataSC.ts --network",
+    "script:add-whitelist": "npx hardhat run ./scripts/arcadia/5_addWhitelist.ts --network",
+    "script:fetch-data": "npx hardhat run ./scripts/arcadia/6_fetchDataSC.ts --network",
     "deploy": "npx hardhat deploy --network",
     "chain:hardhat": "cross-env BUILDING=true hardhat node --network hardhat --no-deploy",
     "chain:foundry": "anvil",
