Update items list and add/update scripts

--- a/packages/solidity-ts/package.json
+++ b/packages/solidity-ts/package.json
@@ -8,11 +8,12 @@
     "merkle-generate": "ts-node helpers/merkle-tree/generateTree.ts",
     "script:format-local-data": "npx hardhat run ./scripts/arcadia/0_formatLocalData.ts",
     "script:mint-items": "npx hardhat run ./scripts/arcadia/1_mintItems.ts --network",
-    "script:create-slots": "npx hardhat run ./scripts/arcadia/2_createSlots.ts --network",
+    "script:setup-slots": "npx hardhat run ./scripts/arcadia/2_setupSlots.ts --network",
     "script:mint-and-equip": "npx hardhat run ./scripts/arcadia/3_mintAndEquip.ts --network",
     "script:unequip-items": "npx hardhat run ./scripts/arcadia/4_unequipItems.ts --network",
     "script:add-whitelist": "npx hardhat run ./scripts/arcadia/5_addWhitelist.ts --network",
-    "script:fetch-data": "npx hardhat run ./scripts/arcadia/6_fetchDataSC.ts --network",
+    "script:set-basic-items": "npx hardhat run ./scripts/arcadia/6_setBasicItems.ts --network",
+    "script:fetch-data": "npx hardhat run ./scripts/arcadia/7_fetchDataSC.ts --network",
     "deploy": "npx hardhat deploy --network",
     "chain:hardhat": "cross-env BUILDING=true hardhat node --network hardhat --no-deploy",
     "chain:foundry": "anvil",
