--- a/packages/solidity-ts/package.json
+++ b/packages/solidity-ts/package.json
@@ -14,6 +14,7 @@
     "script:add-whitelist": "npx hardhat run ./scripts/arcadia/addWhitelist.ts --network",
     "script:set-transfer-required": "npx hardhat run ./scripts/arcadia/setTransferRequired.ts --network",
     "script:fetch-data": "npx hardhat run ./scripts/arcadia/fetchDataSC.ts --network",
+    "script:items-airdrop": "npx hardhat run ./scripts/arcadia/itemsAirdrop.ts --network",
     "deploy": "npx hardhat deploy --network",
     "chain:hardhat": "cross-env BUILDING=true hardhat node --network hardhat --no-deploy",
     "chain:foundry": "anvil",
