burned the items and taken a snapshot report

--- a/packages/solidity-ts/package.json
+++ b/packages/solidity-ts/package.json
@@ -8,12 +8,14 @@
     "merkle-generate": "ts-node helpers/merkle-tree/generateTree.ts",
     "script:format-local-data": "npx hardhat run ./scripts/arcadia/formatLocalData.ts",
     "script:mint-items": "npx hardhat run ./scripts/arcadia/mintItems.ts --network",
+    "script:burn-items": "npx hardhat run ./scripts/arcadia/burnItems.ts --network",
     "script:setup-slots": "npx hardhat run ./scripts/arcadia/setupSlots.ts --network",
     "script:mint-and-equip": "npx hardhat run ./scripts/arcadia/mintAndEquip.ts --network",
     "script:unequip-items": "npx hardhat run ./scripts/arcadia/unequipItems.ts --network",
     "script:add-whitelist": "npx hardhat run ./scripts/arcadia/addWhitelist.ts --network",
     "script:set-transfer-required": "npx hardhat run ./scripts/arcadia/setTransferRequired.ts --network",
     "script:fetch-data": "npx hardhat run ./scripts/arcadia/fetchDataSC.ts --network",
+    "script:generate-items-snapshot": "npx hardhat run ./scripts/arcadia/generate-arcadians-items-snapshot.ts --network",
     "script:items-airdrop": "npx hardhat run ./scripts/arcadia/itemsAirdrop.ts --network",
     "script:items-airdrop-og": "npx hardhat run ./scripts/arcadia/itemsAirdropOG.ts --network",
     "script:test": "npx hardhat run ./scripts/arcadia/test.ts --network",
@@ -68,6 +70,7 @@
     "@typechain/hardhat": "^6.1.3",
     "bip39": "^3.0.4",
     "chalk": "^4.1.2",
+    "convert-csv-to-json": "^2.0.0",
     "ethers": "^5.7.1",
     "hardhat": "^2.12.7",
     "hardhat-contract-sizer": "^2.6.1",
